--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 beautifulsoup4==4.12.3
 dateparser==1.2.0
 matplotlib==3.9.1
-numpy==2.0.0
+numpy==2.0.1
 pandas==2.2.2
+scipy==1.14.0
 seaborn==0.13.2
 selenium==4.23.0
